force-app/main/default/objects/Google_Place_Api_Field_Mapping__mdt/Google_Place_Api_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>To map google place Api node with salesforce field</description>
    <label>Google Place Api Field Mapping</label>
    <pluralLabel>Google Place Api Field Mappings</pluralLabel>
</CustomObject>