force-app/main/default/objects/Google_Place_Api_Field_Mapping__mdt/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <label>Address Line 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>