force-app/main/default/objects/Google_Place_Api_Field_Mapping__mdt/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>