force-app/main/default/objects/Google_Place_Api_Field_Mapping__mdt/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>